ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-external
  namespace: nginx-staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: nginx-external
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: nginx
               port: 
                 number: 80
